--- a/index.html
+++ b/index.html
@@ -1,113 +1,93 @@
-<!DOCTYPE HTML>
-<html>
+<!doctype html>
+
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title></title>
-<link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@100;300;600&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@600&display=swap" rel="stylesheet"> 
+  <title>rezerwacja</title>
+  <style>
+      body{
+        font-family:Bebas Neue;
+        margin:auto;
+        padding:10px;
+        width:50%;
+        height:50%;
+      }
+.napis1 {
+text-align:center;
+font-size: 30px;
+}
+.napis2{
+    text-align:center;
+    font-size: 50px;
+}
+.pola {
+    text-align:center;
+}
+button {
+background-color: red;
+width:370px;
+font-family: Bebas Neue;
+min-height:70px;
+color:white;
+}
+input{
+font-family: Bebas Neue;
+size:50;
+min-height:70px;
+}
+.tlo1{
+position:absolute;
+top:300px;
+left:400px;
+}
+.tlo2{
+position:absolute;
+top:70px;
+left:0px;
+}
+.tlo3{
+position:absolute;
+right:0;
+bottom:50px;
+}
+  </style>
 </head>
 <body>
-    <div id="first-section-container">
-        <div id="first-section">
-            <nav id="navigation-bar">
-                <a href="index.html">
-                    <img src="img/logo.png" alt="">
-                    
-                </a>
-                <div class="navigation-links-container">
-                    <div class="navigation-links-contact" name="contact">
-                        <label for="contact">
-                            <img src="img/scooter.png" alt="">
-                        </label>
-                        Express Delivery +1 234 567 890
-                    </div>
-                    <ul class="navigation-links">
-                        <li>
-                            HOME
-                        </li>
-                        <li>
-                            MENU
-                        </li>
-                        <li>
-                            OUR STORY
-                        </li>
-                        <li>
-                            CONTACT US
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="first-section-container-body">
-                <div class="first-section-container-left">
-                    <span class="first-section-good">
-                        IT IS A GOOD TIME FOR THE GREAT TASTE OF BURGERS
-                    </span>
-                    <img src="img/burger_week.png" alt="">
-                </div>
-                <img src="img/first_section_burger.png" alt="">
-            </div>
-        </div>
+    <div class="cale">
+        <br><br><br><br><br><br><br>
+    <div class="tlo1">
+    <img src="1.png" width="100" height="300" >
     </div>
-    <div id="last-section-container">
-        <div id="last-section">
-            <div id="last-section-left">
-                <div class="last-section-left-firstgroup">
-                    <span class="last-section-left-header">
-                        <label for="last-section-left-header">
-                            <img src="img/burger_logo.png" alt="">
-                        </label>
-                        BURGER HOUSE
-        
-                    </span>
-                    <span class="last-section-left-description">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. A perferendis delectus fugiat earum hic rerum, unde, ex veritatis expedita culpa nulla alias, excepturi tenetur deleniti sequi necessitatibus sit eius. Quam accusantium deleniti voluptates adipisci vero rem exercitationem nemo voluptatem aliquam eligendi, vel deserunt dignissimos ab!
-                    </span>
-                </div>
-                <span class="last-section-left-copyright">
-                    © COMPANY NAME 2020 ALL RIGHTS RESERVED
-                </span>
-            </div>
-            <div id="last-section-right">
-                <div class="last-section-right-element">
-                    <span name="location">
-                        <label for="location">
-                            <img src="img/location_icon.png" alt="">
-                        </label>
-                        MAIN ROAD, BUILDING NAME, COUNTRY
-                    </span>
-                    <span name="email" id="last-section-right-element-email">
-                        <label for="email">
-                            <img src="img/email_icon.png" alt="">
-                        </label>
-                        INFO@COMPANYNAME.COM
-                    </span>
-                </div>
-                <div class="last-section-right-element">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <img src="img/instagram.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="img/facebook.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="img/twitter.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="img/whatsapp.png" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+    <div class="tlo2">
+        <img src="2.jpg" width="300" height="300" >
         </div>
+        <div class="tlo3">
+            <img src="3.jpg" width="300" height="300" >
+            </div>
+<div class="napis1">
+    <br>
+Reservation
+</div>
+<div class="napis2">
+    <b>Book your table</b>
+</div>
+<div class="pola">
+    <br>
+    <input type="text" size="70" placeholder="Name">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="text" size="70" placeholder="Email">
+    <br>
+    <br>
+    <input type="text" size="70" placeholder="Date">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="text" size="70" placeholder="Time">
+    <br>
+    <br>
+    <input type="text" size="70" placeholder="People">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <button type="button">Find a table</button>
+</div>
     </div>
 </body>
 </html>
